--- a/03X_ST_IC/02_prod/live_test_binance.ipynb
+++ b/03X_ST_IC/02_prod/live_test_binance.ipynb
@@ -101,21 +101,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00,  5.87it/s]"
+      "100%|██████████| 1/1 [00:00<00:00,  9.61it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reached endtime at 2025-01-10 04:01:00. Stopping fetch.\n"
+      "Reached endtime at 2025-01-10 06:01:00. Stopping fetch.\n"
      ]
     },
     {
@@ -124,6 +124,149 @@
      "text": [
       "\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>opentime</th>\n",
+       "      <th>openprice</th>\n",
+       "      <th>highprice</th>\n",
+       "      <th>lowprice</th>\n",
+       "      <th>closeprice</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1736339400000</td>\n",
+       "      <td>195.83</td>\n",
+       "      <td>195.90</td>\n",
+       "      <td>194.83</td>\n",
+       "      <td>194.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1736341200000</td>\n",
+       "      <td>194.98</td>\n",
+       "      <td>197.84</td>\n",
+       "      <td>194.98</td>\n",
+       "      <td>197.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1736343000000</td>\n",
+       "      <td>197.14</td>\n",
+       "      <td>197.38</td>\n",
+       "      <td>196.53</td>\n",
+       "      <td>197.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1736344800000</td>\n",
+       "      <td>197.01</td>\n",
+       "      <td>198.46</td>\n",
+       "      <td>196.66</td>\n",
+       "      <td>197.78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1736346600000</td>\n",
+       "      <td>197.77</td>\n",
+       "      <td>199.21</td>\n",
+       "      <td>196.79</td>\n",
+       "      <td>197.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>79</th>\n",
+       "      <td>1736481600000</td>\n",
+       "      <td>189.01</td>\n",
+       "      <td>189.88</td>\n",
+       "      <td>188.64</td>\n",
+       "      <td>188.92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80</th>\n",
+       "      <td>1736483400000</td>\n",
+       "      <td>188.92</td>\n",
+       "      <td>189.33</td>\n",
+       "      <td>188.48</td>\n",
+       "      <td>188.97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>1736485200000</td>\n",
+       "      <td>188.98</td>\n",
+       "      <td>189.42</td>\n",
+       "      <td>188.27</td>\n",
+       "      <td>188.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <td>1736487000000</td>\n",
+       "      <td>188.70</td>\n",
+       "      <td>191.32</td>\n",
+       "      <td>188.66</td>\n",
+       "      <td>189.78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83</th>\n",
+       "      <td>1736488800000</td>\n",
+       "      <td>189.78</td>\n",
+       "      <td>189.99</td>\n",
+       "      <td>189.76</td>\n",
+       "      <td>189.77</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>84 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         opentime  openprice  highprice  lowprice  closeprice\n",
+       "0   1736339400000     195.83     195.90    194.83      194.99\n",
+       "1   1736341200000     194.98     197.84    194.98      197.15\n",
+       "2   1736343000000     197.14     197.38    196.53      197.01\n",
+       "3   1736344800000     197.01     198.46    196.66      197.78\n",
+       "4   1736346600000     197.77     199.21    196.79      197.60\n",
+       "..            ...        ...        ...       ...         ...\n",
+       "79  1736481600000     189.01     189.88    188.64      188.92\n",
+       "80  1736483400000     188.92     189.33    188.48      188.97\n",
+       "81  1736485200000     188.98     189.42    188.27      188.70\n",
+       "82  1736487000000     188.70     191.32    188.66      189.78\n",
+       "83  1736488800000     189.78     189.99    189.76      189.77\n",
+       "\n",
+       "[84 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -131,25 +274,25 @@
     "data = binance_recursive_fetch_2(\n",
     "    ['SOL'],\n",
     "    '30m',\n",
-    "    starttime=int(1736481600000 - 1800000),\n",
-    "    endtime=int(1736481600000),\n",
+    "    starttime=int(1736339400000),\n",
+    "    endtime=int(1736463600000),\n",
     "    data_type='futures'  # Fetch futures/sport\n",
     ")\n",
     "\n",
-    "# # Define the column names for the DataFrame based on the Binance API response structure\n",
-    "# columns = ['coin', 'opentime', 'openprice', 'highprice', 'lowprice', 'closeprice', 'volume', 'closetime', \n",
-    "#             'quotevolume', 'trades', 'taker_buy_volume', 'taker_buy_quote', 'unused']\n",
+    "# Define the column names for the DataFrame based on the Binance API response structure\n",
+    "columns = ['coin', 'opentime', 'openprice', 'highprice', 'lowprice', 'closeprice', 'volume', 'closetime', \n",
+    "            'quotevolume', 'trades', 'taker_buy_volume', 'taker_buy_quote', 'unused']\n",
     "\n",
-    "# # Convert the list of data into a DataFrame\n",
-    "# new_data = pd.DataFrame(data['data'], columns=columns)\n",
+    "# Convert the list of data into a DataFrame\n",
+    "new_data = pd.DataFrame(data['data'], columns=columns)\n",
     "\n",
-    "# # Drop unnecessary columns\n",
-    "# new_data.drop(columns=['coin', 'volume', 'closetime', 'quotevolume', 'trades', 'taker_buy_volume', 'taker_buy_quote', 'unused'], inplace=True)\n",
+    "# Drop unnecessary columns\n",
+    "new_data.drop(columns=['coin', 'volume', 'closetime', 'quotevolume', 'trades', 'taker_buy_volume', 'taker_buy_quote', 'unused'], inplace=True)\n",
     "\n",
-    "# # Convert columns 1-4 (openprice, highprice, lowprice, closeprice) to float\n",
-    "# new_data[['openprice', 'highprice', 'lowprice', 'closeprice']] = new_data[['openprice', 'highprice', 'lowprice', 'closeprice']].apply(pd.to_numeric, errors='coerce')\n",
+    "# Convert columns 1-4 (openprice, highprice, lowprice, closeprice) to float\n",
+    "new_data[['openprice', 'highprice', 'lowprice', 'closeprice']] = new_data[['openprice', 'highprice', 'lowprice', 'closeprice']].apply(pd.to_numeric, errors='coerce')\n",
     "\n",
-    "# new_data"
+    "new_data"
    ]
   },
   {
