--- a/03X_ST_IC/02_prod/live_test_binance.ipynb
+++ b/03X_ST_IC/02_prod/live_test_binance.ipynb
@@ -2679,13 +2679,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import requests\n",
     "import hashlib\n",
     "import urllib.parse\n",
     "import hmac\n",
+    "import time\n",
     "\n",
     "class BinanceAPI:\n",
     "    def __init__(self, api_key: str, api_secret: str, testnet: bool = False):\n",
@@ -2821,7 +2823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2835,7 +2837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2843,7 +2845,7 @@
      "output_type": "stream",
      "text": [
       "Ping Response: {}\n",
-      "Server Time: {'serverTime': 1736411976575}\n"
+      "Server Time: {'serverTime': 1736761488408}\n"
      ]
     }
    ],
@@ -2859,14 +2861,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Balance Info: [{'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'FDUSD', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '99.00107864', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BFUSD', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '99.89011004', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BNB', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '0.13675352', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'ETH', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '0.02868846', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BTC', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '0.00102066', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'USDT', 'balance': '100.00000000', 'crossWalletBalance': '100.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '99.98000230', 'maxWithdrawAmount': '100.00000000', 'marginAvailable': True, 'updateTime': 1736411620939}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'USDC', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '99.92668387', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}]\n"
+      "Balance Info: [{'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'FDUSD', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '4868.74154351', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BFUSD', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '4914.92161774', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BNB', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '6.94968165', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'ETH', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '1.48216125', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BTC', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '0.05040088', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'USDT', 'balance': '5101.41459870', 'crossWalletBalance': '5101.41459870', 'crossUnPnl': '-0.94000000', 'availableBalance': '4919.34462865', 'maxWithdrawAmount': '4919.34462865', 'marginAvailable': True, 'updateTime': 1736760911262}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'USDC', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '4915.73763764', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}]\n"
      ]
     }
    ],
@@ -2877,17 +2879,6 @@
     "# Print the balance information\n",
     "if balance:\n",
     "    print(\"Balance Info:\", balance)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import logging\n",
-    "\n",
-    "logging.basicConfig(level=logging.INFO)"
    ]
   },
   {
@@ -2904,13 +2895,13 @@
     }
    ],
    "source": [
-    "long_order_response = binance_api.create_order(\n",
-    "    symbol=\"SUIUSDT\",    # Trading pair\n",
-    "    side=\"BUY\",          # Buy to open a long position\n",
-    "    order_type=\"MARKET\", # Market order for instant execution\n",
-    "    quantity=2         # Valid quantity in SUI (base asset)\n",
-    ")\n",
-    "print(\"Long Order Response:\", long_order_response)"
+    "# long_order_response = binance_api.create_order(\n",
+    "#     symbol=\"SUIUSDT\",    # Trading pair\n",
+    "#     side=\"BUY\",          # Buy to open a long position\n",
+    "#     order_type=\"MARKET\", # Market order for instant execution\n",
+    "#     quantity=2         # Valid quantity in SUI (base asset)\n",
+    "# )\n",
+    "# print(\"Long Order Response:\", long_order_response)"
    ]
   },
   {
@@ -2927,39 +2918,74 @@
     }
    ],
    "source": [
-    "long_order_response = binance_api.create_order(\n",
-    "    symbol=\"SUIUSDT\",    # Trading pair\n",
-    "    side=\"SELL\",          # Buy to open a long position\n",
-    "    order_type=\"MARKET\", # Market order for instant execution\n",
-    "    quantity=2         # Valid quantity in SUI (base asset)\n",
-    ")\n",
-    "print(\"Short Order Response:\", long_order_response)"
+    "# long_order_response = binance_api.create_order(\n",
+    "#     symbol=\"SUIUSDT\",    # Trading pair\n",
+    "#     side=\"SELL\",          # Buy to open a long position\n",
+    "#     order_type=\"MARKET\", # Market order for instant execution\n",
+    "#     quantity=2         # Valid quantity in SUI (base asset)\n",
+    "# )\n",
+    "# print(\"Short Order Response:\", long_order_response)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:Closed position: SUIUSDT with quantity 2.0\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Close All Response: None\n"
+      "Initial Mark Price: {'symbol': 'SOLUSDT', 'markPrice': '180.17000000', 'indexPrice': '180.20531310', 'estimatedSettlePrice': '180.10616796', 'lastFundingRate': '0.00008551', 'interestRate': '0.00010000', 'nextFundingTime': 1736784000000, 'time': 1736761914000}\n",
+      "Quantity: 5.5503135927179885\n",
+      "Last Mark Price: 180.17\n",
+      "Last Quantity: 999.9999999999999\n"
      ]
     }
    ],
    "source": [
-    "# Assuming you have an instance of the class with the close_all_position method\n",
-    "close_all = binance_api.close_all_position()\n",
-    "print(\"Close All Response:\", close_all)"
+    "get_initial_price = binance_api.get_mark_price(symbol='SOLUSDT')\n",
+    "print(\"Initial Mark Price:\", get_initial_price)\n",
+    "\n",
+    "trade_ammount_usdt = 1000\n",
+    "initial_mark_price = float(get_initial_price['markPrice'])  # Convert to float\n",
+    "quantity = trade_ammount_usdt / initial_mark_price\n",
+    "\n",
+    "print(\"Quantity:\", quantity)\n",
+    "\n",
+    "get_last_price = binance_api.get_mark_price(symbol='SOLUSDT')\n",
+    "last_mark_price = float(get_last_price['markPrice'])  # Convert to float\n",
+    "print(\"Last Mark Price:\", last_mark_price)\n",
+    "\n",
+    "print(\"Last Quantity:\", quantity*last_mark_price)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adjusted Quantity: 5.55\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "# Example values\n",
+    "trade_amount_usdt = 1000\n",
+    "mark_price = 180.18  # Replace with actual mark price\n",
+    "step_size = 0.01  # Replace with the correct step size from Binance's exchangeInfo\n",
+    "\n",
+    "# Calculate quantity\n",
+    "raw_quantity = trade_amount_usdt / mark_price\n",
+    "quantity = math.floor(raw_quantity / step_size) * step_size\n",
+    "\n",
+    "print(\"Adjusted Quantity:\", quantity)  # This should now be valid for Binance"
    ]
   },
   {
@@ -2977,6 +3003,32 @@
    ],
    "source": [
     "print(f\"Request Parameters: symbol=SUIUSDT, side=BUY, type=MARKET, quantity=0.1, timestamp={int(time.time() * 1000)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'BinanceAPI' object has no attribute 'get_exchange_info'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m exchange_info \u001b[38;5;241m=\u001b[39m \u001b[43mbinance_api\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_exchange_info\u001b[49m()\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m symbol \u001b[38;5;129;01min\u001b[39;00m exchange_info[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msymbols\u001b[39m\u001b[38;5;124m'\u001b[39m]:\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m symbol[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msymbol\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSOLUSDT\u001b[39m\u001b[38;5;124m'\u001b[39m:\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'BinanceAPI' object has no attribute 'get_exchange_info'"
+     ]
+    }
+   ],
+   "source": [
+    "exchange_info = binance_api.get_exchange_info()\n",
+    "for symbol in exchange_info['symbols']:\n",
+    "    if symbol['symbol'] == 'SOLUSDT':\n",
+    "        for f in symbol['filters']:\n",
+    "            if f['filterType'] == 'LOT_SIZE':\n",
+    "                print(f)"
    ]
   },
   {
