--- a/03X_ST_IC/02_prod/live_test_binance.ipynb
+++ b/03X_ST_IC/02_prod/live_test_binance.ipynb
@@ -2679,7 +2679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2823,7 +2823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2837,7 +2837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2845,7 +2845,7 @@
      "output_type": "stream",
      "text": [
       "Ping Response: {}\n",
-      "Server Time: {'serverTime': 1736761488408}\n"
+      "Server Time: {'serverTime': 1736826911597}\n"
      ]
     }
    ],
@@ -2861,14 +2861,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Balance Info: [{'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'FDUSD', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '4868.74154351', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BFUSD', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '4914.92161774', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BNB', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '6.94968165', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'ETH', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '1.48216125', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BTC', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '0.05040088', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'USDT', 'balance': '5101.41459870', 'crossWalletBalance': '5101.41459870', 'crossUnPnl': '-0.94000000', 'availableBalance': '4919.34462865', 'maxWithdrawAmount': '4919.34462865', 'marginAvailable': True, 'updateTime': 1736760911262}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'USDC', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '4915.73763764', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}]\n"
+     "ename": "NameError",
+     "evalue": "name 'logging' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mHTTPError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 49\u001b[0m, in \u001b[0;36mBinanceAPI._send_request\u001b[0;34m(self, method, endpoint, params, signed)\u001b[0m\n\u001b[1;32m     47\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid method: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmethod\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 49\u001b[0m \u001b[43mresponse\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mraise_for_status\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     50\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m response\u001b[38;5;241m.\u001b[39mjson()\n",
+      "File \u001b[0;32m~/Rheza/.venv/lib/python3.12/site-packages/requests/models.py:1024\u001b[0m, in \u001b[0;36mResponse.raise_for_status\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1023\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m http_error_msg:\n\u001b[0;32m-> 1024\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m HTTPError(http_error_msg, response\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m)\n",
+      "\u001b[0;31mHTTPError\u001b[0m: 401 Client Error: Unauthorized for url: https://fapi.binance.com/fapi/v2/balance?timestamp=1736826926571&signature=37bd4abc729b9491463ff8b8d9d890fd8e2cdee2710b655ed98df83d630ca3db",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Get balance information\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m balance \u001b[38;5;241m=\u001b[39m \u001b[43mbinance_api\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheck_balance\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Print the balance information\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m balance:\n",
+      "Cell \u001b[0;32mIn[1], line 136\u001b[0m, in \u001b[0;36mBinanceAPI.check_balance\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    132\u001b[0m params \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m    133\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtimestamp\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28mint\u001b[39m(time\u001b[38;5;241m.\u001b[39mtime() \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m1000\u001b[39m)\n\u001b[1;32m    134\u001b[0m }\n\u001b[1;32m    135\u001b[0m params[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msignature\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_generate_signature(params)\n\u001b[0;32m--> 136\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_send_request\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mGET\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mendpoint\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparams\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mparams\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[1], line 53\u001b[0m, in \u001b[0;36mBinanceAPI._send_request\u001b[0;34m(self, method, endpoint, params, signed)\u001b[0m\n\u001b[1;32m     50\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m response\u001b[38;5;241m.\u001b[39mjson()\n\u001b[1;32m     52\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m requests\u001b[38;5;241m.\u001b[39mexceptions\u001b[38;5;241m.\u001b[39mRequestException \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m---> 53\u001b[0m     \u001b[43mlogging\u001b[49m\u001b[38;5;241m.\u001b[39merror(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAPI request failed: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00me\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     54\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'logging' is not defined"
      ]
     }
    ],
@@ -2879,6 +2890,30 @@
     "# Print the balance information\n",
     "if balance:\n",
     "    print(\"Balance Info:\", balance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize connection to Binance\n",
+    "API_KEY = \"TGZ6PvNeQc3c3ctlzm0UOdkgr1fi5oEMMPXDK9Dns51VXGKYGIirlOJ8de5TYNRC\"\n",
+    "API_SECRET = \"Ng4YmUDDzq7W9l5F08qcY3Qq2OXms4xE7A9nlslDIxP2agjVWqmZbOOxCRTZEHOl\"\n",
+    "binance_api = BinanceAPI(api_key=API_KEY, api_secret=API_SECRET, testnet=False)\n",
+    "\n",
+    "symbol = 'SOLUSDT'\n",
+    "\n",
+    "gpr = binance_api.get_position_risk(symbol=symbol)\n",
+    "if float(gpr[0]['entryPrice']) < float(gpr[0]['entryPrice']):\n",
+    "    prev_action = 'Long'\n",
+    "elif float(gpr[0]['entryPrice']) > float(gpr[0]['entryPrice']):\n",
+    "    prev_action = 'Short'\n",
+    "else:\n",
+    "    prev_action = None\n",
+    "\n",
+    "prev_action   "
    ]
   },
   {
@@ -2929,27 +2964,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initial Mark Price: {'symbol': 'SOLUSDT', 'markPrice': '180.17000000', 'indexPrice': '180.20531310', 'estimatedSettlePrice': '180.10616796', 'lastFundingRate': '0.00008551', 'interestRate': '0.00010000', 'nextFundingTime': 1736784000000, 'time': 1736761914000}\n",
-      "Quantity: 5.5503135927179885\n",
-      "Last Mark Price: 180.17\n",
-      "Last Quantity: 999.9999999999999\n"
+      "Initial Mark Price: {'symbol': 'SOLUSDT', 'markPrice': '183.94000000', 'indexPrice': '184.03719791', 'estimatedSettlePrice': '184.09272903', 'lastFundingRate': '-0.00003037', 'interestRate': '0.00010000', 'nextFundingTime': 1736841600000, 'time': 1736825796000}\n",
+      "Quantity: 5.436\n",
+      "Last Mark Price: 183.94\n",
+      "Last Quantity: 999.89784\n"
      ]
     }
    ],
    "source": [
+    "import math\n",
+    "\n",
     "get_initial_price = binance_api.get_mark_price(symbol='SOLUSDT')\n",
     "print(\"Initial Mark Price:\", get_initial_price)\n",
     "\n",
     "trade_ammount_usdt = 1000\n",
     "initial_mark_price = float(get_initial_price['markPrice'])  # Convert to float\n",
     "quantity = trade_ammount_usdt / initial_mark_price\n",
+    "quantity = math.floor(quantity * 1000) / 1000\n",
     "\n",
     "print(\"Quantity:\", quantity)\n",
     "\n",
@@ -2958,6 +2996,49 @@
     "print(\"Last Mark Price:\", last_mark_price)\n",
     "\n",
     "print(\"Last Quantity:\", quantity*last_mark_price)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Order Response: {'orderId': 91899502171, 'symbol': 'SOLUSDT', 'status': 'NEW', 'clientOrderId': 'sHA92MLfcvwZJfOXcizFob', 'price': '0.0000', 'avgPrice': '0.00', 'origQty': '1', 'executedQty': '0', 'cumQty': '0', 'cumQuote': '0.0000', 'timeInForce': 'GTC', 'type': 'MARKET', 'reduceOnly': False, 'closePosition': False, 'side': 'BUY', 'positionSide': 'BOTH', 'stopPrice': '0.0000', 'workingType': 'CONTRACT_PRICE', 'priceProtect': False, 'origType': 'MARKET', 'priceMatch': 'NONE', 'selfTradePreventionMode': 'EXPIRE_MAKER', 'goodTillDate': 0, 'updateTime': 1736826002341}\n"
+     ]
+    }
+   ],
+   "source": [
+    "long_order_response = binance_api.create_order(\n",
+    "    symbol=\"SOLUSDT\",    # Trading pair\n",
+    "    side=\"BUY\",          # Buy to open a long position\n",
+    "    order_type=\"MARKET\", # Market order for instant execution\n",
+    "    quantity= 1\n",
+    ")\n",
+    "print(\"Order Response:\", long_order_response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(quantity)"
    ]
   },
   {
@@ -2990,45 +3071,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Request Parameters: symbol=SUIUSDT, side=BUY, type=MARKET, quantity=0.1, timestamp=1736411699007\n"
+      "[{'symbol': 'SOLUSDT', 'positionSide': 'BOTH', 'positionAmt': '5', 'entryPrice': '183.15', 'breakEvenPrice': '183.241575', 'markPrice': '183.44000000', 'unRealizedProfit': '1.45000000', 'liquidationPrice': '0', 'isolatedMargin': '0', 'notional': '917.20000000', 'marginAsset': 'USDT', 'isolatedWallet': '0', 'initialMargin': '917.20000000', 'maintMargin': '4.58600000', 'positionInitialMargin': '917.20000000', 'openOrderInitialMargin': '0', 'adl': 2, 'bidNotional': '0', 'askNotional': '0', 'updateTime': 1736811155193}]\n"
      ]
     }
    ],
    "source": [
-    "print(f\"Request Parameters: symbol=SUIUSDT, side=BUY, type=MARKET, quantity=0.1, timestamp={int(time.time() * 1000)}\")"
+    "gpr = binance_api.get_position_risk(symbol='SOLUSDT')\n",
+    "print(gpr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'BinanceAPI' object has no attribute 'get_exchange_info'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m exchange_info \u001b[38;5;241m=\u001b[39m \u001b[43mbinance_api\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_exchange_info\u001b[49m()\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m symbol \u001b[38;5;129;01min\u001b[39;00m exchange_info[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msymbols\u001b[39m\u001b[38;5;124m'\u001b[39m]:\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m symbol[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msymbol\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSOLUSDT\u001b[39m\u001b[38;5;124m'\u001b[39m:\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'BinanceAPI' object has no attribute 'get_exchange_info'"
-     ]
+     "data": {
+      "text/plain": [
+       "183.15"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "exchange_info = binance_api.get_exchange_info()\n",
-    "for symbol in exchange_info['symbols']:\n",
-    "    if symbol['symbol'] == 'SOLUSDT':\n",
-    "        for f in symbol['filters']:\n",
-    "            if f['filterType'] == 'LOT_SIZE':\n",
-    "                print(f)"
+    "# Identify current position\n",
+    "gpr = binance_api.get_position_risk(symbol='SOLUSDT')\n",
+    "if float(gpr[0]['entryPrice']) < float(gpr[0]['entryPrice'])\n",
+    "    prev_action = 'Long'\n",
+    "elif float(gpr[0]['entryPrice']) > float(gpr[0]['entryPrice'])\n",
+    "    prev_action = 'Short'\n",
+    "else\n",
+    "    prev_action = None\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.0"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "float(gpr[0]['positionAmt'])"
    ]
   },
   {
